[package]
name = "cargo-neko"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
description = "Cody said: They can love neko"
license = "MIT"
repository = "https://github.com/AkiaCode/cargo-neko"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viuer = "0.4.0"
reqwest = { version = "0.11.2", features = ["blocking"]}
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"